# FrugalSOT

./: .dockerignore  .gitignore  CHANGELOG.md  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  build-release.sh  config.json  demo.sh  docker-compose.yml  entrypoint.sh  frugalSot.sh  frugalsot-cli  frugalsot-cli-test  frugalsot.py  inefficient.sh  inference.sh  install.sh  main.py  main.sh  models.py  package-lock.json  prompt.py  pyproject.toml  requirements.txt  sample.sh  sample_onnx.py  textSimilarity.py
FrugalSOT-Go/: Makefile  go.mod  go.sum  readme.md
data/: benchmark.txt  config.json  config_a100.json  config_b200.json  config_h100.json  config_rtx_5090.json  config_rtx_pro_6000.json  output.txt  test.txt  threshold.json  threshold_a100.json  threshold_b200.json  threshold_h100.json  threshold_rtx_5090.json  threshold_rtx_pro_6000.json
frugalSOT Website/: README.md  index.html  package-lock.json  package.json
myenv/: pyvenv.cfg
scripts/: frugalSot-cli-test.sh  frugalSot-cli.sh  frugalSot.sh  inef1.sh  inef2.sh  inef3.sh  inef4.sh  inefficient.sh  inference.sh  modelThing.sh
server/: package-lock.json  package.json  server.js
src/: gui.py  main.py  modelInitialization.py  prompt.py  textSimilarity-mock.py  textSimilarity.py
threshold_calculations/: README.md  high_complexity_prompts.txt  high_complexity_prompts_refined.txt  low_complexity_prompts.txt  low_complexity_prompts_refined.txt  mid_complexity_prompts.txt  mid_complexity_prompts_refined.txt  run_all_threshold_calculators.sh  threshold_calculator.sh  (+5 more)
(+58 files in other folders)
